Cambios significativos con gran diseño.

--- a/index.html
+++ b/index.html
@@ -402,19 +402,30 @@
                 <img src="https://img.heresirc.com/Imagenes/perfil.jpg" alt="SIRC" class="profile-img" id="profileImg" />
             </div>
         </div>
-        <div class="hero-right">
-            <h1>SIRC</h1>
-            <p class="tagline-neon">inteligencia sintética · arquitectura cuántica</p>
-            <div class="social-tech">
-                <a href="#" class="social-item" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social-item" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="social-item" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" class="social-item" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-            <div class="email-holo">
-                <i class="fas fa-envelope" style="color:#ff5e00; margin-right:8px;"></i>
-                <a href="mailto:hola@heresirc.space">hola@heresirc.space</a>
-            </div>
+        <div class="social-tech">
+            <a href="https://www.facebook.com/share/1897MroDnf/"
+               class="social-item"
+               aria-label="Facebook"
+               target="_blank"
+               rel="noopener noreferrer">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+
+            <a href="https://www.instagram.com/cris_tellezz/"
+               class="social-item"
+               aria-label="Instagram"
+               target="_blank"
+               rel="noopener noreferrer">
+                <i class="fab fa-instagram"></i>
+            </a>
+
+            <a href="#" class="social-item" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+
+            <a href="#" class="social-item" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
         </div>
     </section>
 
