Cambios de estilo

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="hero-left">
             <div class="avatar-tech" id="avatarContainer">
                 <!-- los anillos se eliminan (no Nike) -->
-                <img src="https://img.heresirc.com/Imagenes/perfil.jpg" alt="SIRC" class="profile-img" id="profileImg" />
+                <img src="https://img.heresirc.com/Imagenes/icono.png" alt="SIRC" class="profile-img" id="profileImg" />
             </div>
         </div>
         <div class="social-tech">
