--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             border-bottom: 2px solid #eee;
             margin-bottom: 2rem;
             flex-wrap: wrap;
+            position: relative; /* para el dropdown en móvil */
         }
 
         .logo {
@@ -359,10 +360,31 @@
             .tech-grid { grid-template-columns: repeat(2, 1fr); }
         }
 
+        /* ====== FIX MENÚ MÓVIL ====== */
         @media (max-width: 768px) {
             .nav-bar { padding: 1rem 0; }
-            .nav-links { display: none; }
+
+            /* el botón sí aparece */
             .menu-toggle { display: block; }
+
+            /* menú oculto por defecto */
+            .nav-links {
+                display: none;
+                width: 100%;
+                flex-direction: column;
+                gap: 0.9rem;
+                padding: 1rem 0 0.2rem;
+                margin-top: 1rem;
+                border-top: 2px solid #eee;
+            }
+            /* menú visible cuando está activo */
+            .nav-links.is-open { display: flex; }
+
+            .nav-links a {
+                padding: 0.6rem 0;
+                border-bottom: 1px solid #eee;
+            }
+            .nav-links a:last-child { border-bottom: none; }
 
             .hero-nike {
                 grid-template-columns: 1fr;
@@ -393,14 +415,18 @@
 <div class="nike-wrapper">
     <nav class="nav-bar">
         <a href="#" class="logo">SIRC<span>.</span></a>
-        <div class="nav-links">
+
+        <div class="nav-links" id="mobileNav">
             <a href="#inicio">INICIO</a>
             <a href="#nosotros">ADN</a>
             <a href="#mision">MISIÓN</a>
             <a href="#vision">VISIÓN</a>
             <a href="#valores">VALORES</a>
         </div>
-        <button class="menu-toggle" aria-label="Menú"><i class="fas fa-bars"></i></button>
+
+        <button class="menu-toggle" id="menuToggle" aria-label="Menú" aria-expanded="false" aria-controls="mobileNav">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
 
     <!-- HERO -->
@@ -506,7 +532,7 @@
         </div>
     </section>
 
-    <!-- GALERÍA (se mantiene; si quieres, después la cambiamos por screenshots de proyectos) -->
+    <!-- GALERÍA -->
     <section class="float-container" aria-label="Galería">
         <img src="https://img.heresirc.com/Imagenes/paisaje4.jpg" alt="Galería 1" class="float-img" loading="lazy" />
         <img src="https://img.heresirc.com/Imagenes/paisaje5.jpg" alt="Galería 2" class="float-img" loading="lazy" />
@@ -542,11 +568,44 @@
             if (img.complete && img.naturalWidth === 0) applyFallback();
         }
 
-        // Menú hamburguesa (versión simple)
-        const toggle = document.querySelector('.menu-toggle');
-        if (toggle) {
-            toggle.addEventListener('click', () => {
-                alert('Navegación: INICIO, ADN, MISIÓN, VISIÓN, VALORES (versión simplificada)');
+        // ====== FIX MENÚ MÓVIL (abre/cierra) ======
+        const toggle = document.getElementById('menuToggle');
+        const nav = document.getElementById('mobileNav');
+
+        if (toggle && nav) {
+            const icon = toggle.querySelector('i');
+
+            function setOpen(isOpen) {
+                nav.classList.toggle('is-open', isOpen);
+                toggle.setAttribute('aria-expanded', String(isOpen));
+                if (icon) {
+                    icon.classList.toggle('fa-bars', !isOpen);
+                    icon.classList.toggle('fa-xmark', isOpen);
+                }
+            }
+
+            // Click en botón
+            toggle.addEventListener('click', (e) => {
+                e.preventDefault();
+                const isOpen = nav.classList.contains('is-open');
+                setOpen(!isOpen);
+            });
+
+            // Cierra al tocar un link del menú
+            nav.querySelectorAll('a').forEach(a => {
+                a.addEventListener('click', () => setOpen(false));
+            });
+
+            // Cierra al tocar fuera
+            document.addEventListener('click', (e) => {
+                const target = e.target;
+                const clickInside = nav.contains(target) || toggle.contains(target);
+                if (!clickInside) setOpen(false);
+            });
+
+            // Si cambias a escritorio, deja el estado limpio
+            window.addEventListener('resize', () => {
+                if (window.innerWidth > 768) setOpen(false);
             });
         }
     })();
