--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         .accent { color: #ff5e00; }
         .accent-bg { background-color: #ff5e00; color: white; }
 
-        /* ----- NAVBAR (semi-transparente para que se vea fondo) ----- */
+        /* ----- NAVBAR (semi-transparente) ----- */
         .nav-bar {
             display: flex;
             justify-content: space-between;
@@ -119,7 +119,7 @@
             text-shadow: 0 2px 5px black;
         }
 
-        /* ----- SECCIONES CON FONDO Y ANIMACIONES ----- */
+        /* ----- SECCIONES CON FONDO Y ANIMACIONES (SIN BORDES NI DIVISIONES) ----- */
         .bg-section {
             position: relative;
             background-attachment: fixed; /* efecto parallax suave */
@@ -127,6 +127,10 @@
             background-repeat: no-repeat;
             background-size: cover;
             isolation: isolate;
+            /* Eliminamos cualquier borde o separación */
+            margin: 0;
+            padding: 0;
+            border: none;
         }
 
         /* Fondo para la primera sección (hero) */
@@ -150,12 +154,12 @@
             background-position: center 20%;
         }
 
-        /* capa oscura para legibilidad */
+        /* capa oscura para legibilidad (sin bordes) */
         .bg-section::before {
             content: '';
             position: absolute;
             inset: 0;
-            background: rgba(0, 0, 0, 0.35); /* más oscuro para que resalte el texto */
+            background: rgba(0, 0, 0, 0.35);
             z-index: -1;
             backdrop-filter: blur(2px);
         }
@@ -422,7 +426,7 @@
         /* ----- VALORES con animación scroll (activada por JS) ----- */
         .values-section {
             margin: 5rem 0;
-            border-top: 2px solid rgba(255,255,255,0.25);
+            /* Eliminado border-top */
             padding-top: 3rem;
         }
         .section-title {
@@ -504,9 +508,9 @@
             box-shadow: 0 20px 30px #ff5e0040;
         }
 
-        /* ----- FOOTER ----- */
+        /* ----- FOOTER (sin borde superior) ----- */
         .footer-tech {
-            border-top: 2px solid rgba(255,255,255,0.2);
+            /* Eliminado border-top */
             padding: 2.5rem 0 2rem;
             margin-top: 3rem;
             text-align: center;
@@ -519,6 +523,12 @@
             font-weight: 700;
             text-decoration: none;
             border-bottom: 1px solid #ff5e00;
+        }
+
+        /* Aseguramos que no haya bordes blancos entre secciones */
+        .bg-section + .bg-section {
+            margin-top: 0;
+            border-top: none;
         }
 
         @media (max-width: 1024px) {
