--- a/index.html
+++ b/index.html
@@ -353,28 +353,43 @@
         }
         .email-holo a:hover { color: #ff5e00; }
 
-        /* ----- CARDS con animación al aparecer ----- */
+        /* ----- CARDS con animación al aparecer (SIN SEPARACIÓN ENTRE ELLAS) ----- */
         .tech-grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 2rem;
+            gap: 0; /* Eliminado el gap para que no haya separación blanca */
             margin: 4.5rem 0;
+            border: none; /* Aseguramos que no haya bordes */
         }
 
         .tech-card {
             background: rgba(0, 0, 0, 0.5);
             backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
+            border: none; /* Sin bordes entre tarjetas */
             padding: 2rem 1.5rem 1.8rem;
             transition: all 0.3s ease;
             display: flex;
             flex-direction: column;
-            border-radius: 12px;
-            box-shadow: 0 15px 30px -10px rgba(0,0,0,0.5);
+            border-radius: 0; /* Sin bordes redondeados para que se fusionen */
+            box-shadow: none; /* Sin sombra para evitar separación visual */
             opacity: 0;
             transform: translateY(40px);
             animation: cardAppear 0.8s forwards;
+            margin: 0; /* Sin márgenes */
+            position: relative;
         }
+
+        /* Añadimos un pequeño separador sutil solo para distinguir, pero sin blanco */
+        .tech-card:not(:last-child)::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 15%;
+            height: 70%;
+            width: 1px;
+            background: rgba(255,255,255,0.1); /* Línea casi invisible, no blanca */
+        }
+
         .tech-card:nth-child(1) { animation-delay: 0.1s; }
         .tech-card:nth-child(2) { animation-delay: 0.3s; }
         .tech-card:nth-child(3) { animation-delay: 0.5s; }
@@ -384,9 +399,11 @@
         }
 
         .tech-card:hover {
-            border-color: #ff5e00;
+            background: rgba(0, 0, 0, 0.7); /* Oscurecemos al hover en lugar de borde */
             transform: translateY(-10px) scale(1.02);
+            z-index: 10;
             box-shadow: 0 30px 40px -12px #ff5e0080;
+            border-radius: 12px; /* Solo al hover para dar efecto */
         }
 
         .tech-icon {
@@ -532,7 +549,13 @@
         }
 
         @media (max-width: 1024px) {
-            .tech-grid { grid-template-columns: repeat(2, 1fr); }
+            .tech-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 0; /* Sin gap también en tablet */
+            }
+            .tech-card:not(:last-child)::after {
+                display: none; /* Ocultamos separadores en tablet */
+            }
         }
 
         /* ====== FIX MENÚ MÓVIL ====== */
@@ -563,9 +586,24 @@
             .hero-right { align-items: center; }
             .email-holo { margin: 0.2rem auto 0; }
             .cta-row { justify-content: center; }
-            .tech-grid { grid-template-columns: 1fr; }
+            .tech-grid {
+                grid-template-columns: 1fr;
+                gap: 0; /* Sin gap en móvil */
+            }
+            .tech-card {
+                margin-bottom: 0; /* Sin margen inferior */
+                border-radius: 0; /* Sin bordes redondeados */
+            }
+            .tech-card:hover {
+                border-radius: 12px; /* Solo hover */
+            }
             .values-grid { grid-template-columns: 1fr; }
             .float-container { grid-template-columns: 1fr; }
+
+            /* Ocultamos separadores en móvil */
+            .tech-card:not(:last-child)::after {
+                display: none;
+            }
         }
 
         section, div[id] { scroll-margin-top: 100px; }
@@ -633,6 +671,7 @@
 </section>
 
 <!-- SECCIÓN 2 (CARDS + MISIÓN + VISIÓN) con fondo paisaje5.jpg -->
+<!-- Ahora las cards están pegadas, sin separación blanca entre ellas -->
 <section class="bg-section bg-section-middle">
     <div class="nike-wrapper">
         <!-- CARDS -->
